methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^MethodsReturning:6: error: Unit does not take parameters
    }else(){
           ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for(j<-0 to 6){
       ^MethodsReturning:27: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^